wiLink 1.0.3 (UNRELEASED)
 * Conversations:
  - Recognise /me command.
 * Rooms:
   - Correctly parse multiple "status" elements in presences.
 * Shares:
   - Fix display of shared drives on Windows.
   - Do not re-send registration every minute.
 * Transfers:
   - Disable sending files to room members, it doesn't work.

wiLink 1.0.2 (2010-11-22)
 * Conversations:
   - Fix chat message ordering regression introduced in 1.0.0
   - Fix crash when clearing a conversation history with selected messages.
 * Roster:
   - Improve "My residence" icon.
 * Shares:
   - Fix shares download timeout handling.

wiLink 1.0.0 (2010-11-08)
 * Calls:
   - Make it possible to make calls to room members.
   - Display call information inside relevant chat window.
   - Move call data processing to a thread to avoid buffer underruns.
 * Conversations:
   - Add support for double and tripple click selection.
   - Calculate offset between server time and client time.
   - Make text selection more visible on Windows.
 * Chat rooms:
   - Display room subject and make it possible to change it.
   - When sending messages to a chat room, do not set "from".
   - Display image and profile links for room members.
   - Fix chat room bookmark management.
 * Diagnostics:
   - Report which standards WiFi interfaces support.
 * Menu:
   - Fix parsing of the menu refresh interval.
   - Add support for links to chat rooms.
 * Roster:
   - Put all contacts under a "Contacts" roster entry.
   - Add caching on vCards to reduce network traffic at connect.
   - Add a help panel for contacts.
 * Shares:
   - Make it possible to select additional folders to share.
   - Show options dialog when first run.
 * Transfers:
   - Make it possible to send files to room members.
   - Display transfer progress inside relevant chat window.

wiLink 0.9.9a (2010-09-16)
 * Do not join bookmarked rooms until we receive our nickname.

wiLink 0.9.9 (2010-09-16)
 * Account management: